# radiant-foam

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  parameter.rs  profile.rs  renderer.rs  scene.rs  video.rs  viewer.rs
src/video/: colmap.rs  mod.rs  training.rs
