[package]
name = "radiant-foam"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.9"
rand = "0.10.0"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
